# axum-postgres

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
migrations/: 0001_users_table.sql
src/: config.rs  main.rs
src/controllers/: mod.rs  user.rs
src/db/: mod.rs  user.rs
src/models/: user.rs
